--- a/Frontend/src/app/app.html
+++ b/Frontend/src/app/app.html
@@ -1,7 +1,1 @@
-<!-- Analyse Tactique Football - Page principale -->
-<h1 class="titre-principal">Analyse Tactique Football</h1>
-<p class="sous-titre">Annotez vos séquences vidéo pour analyser les schémas tactiques</p>
-<div class="app-main-layout">
-  <app-video-upload></app-video-upload>
-  <app-tactical-annotation-form></app-tactical-annotation-form>
-</div>
+<router-outlet></router-outlet>
